[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holosense"
version = "0.1.0"
description = "Depth perception and spatial localization from MediaPipe face mesh coordinates. Tracks within an inch at 5ft distance from the camera"
readme = "README.md"
authors = [{ name = "Bala Venkataraman", email = "balav2k7@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["AR", "spatial", "vision"]
dependencies = ["numpy", "mediapipe"]
requires-python = ">=3.7"

[project.urls]
repository    = "https://github.com/balavenkataraman123/Holosense_library"
documentation = "https://midnight-club-devgroup.github.io/holosense/"
